@@ -1,5 +1,6 @@
 Version 1.1.1 (?? ??? 2006)
   - Fixed the following bug reports on SourceForge:
+      1556705: Missing mailto links on view_entry.php
       1431329: user_search_dn() uses call by ref and too many admins
       1523439: Bug with admins in LDAP
       1523442: Bug (Warning) with pass-by-reference
